# latex-template

./: .gitignore  Makefile.in  README.md  aclocal.m4  configure  configure.ac  template.tex
