#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([aud_mgr], m4_esyscmd([tr -d '\n' < VERSION]),
		     [ngbushong@gmail.com])

# Checks for programs.
AC_PROG_INSTALL

AC_PROG_LATEX
AC_PROG_LATEXMK
dnl AC_PROG_DVIPNG
dnl AC_PROG_DVIPS
dnl AC_PROG_CONVERT
dnl AC_LATEX_PACKAGE([type1cm])
dnl AC_FONT([CMU])
dnl AC_PROG_PYTHON
dnl AC_PYTHON_MODULE([matplotlib])
dnl AC_PYTHON_MODULE([bokeh])
dnl AC_PYTHON_MODULE([pytz])
dnl AC_PROG_PHANTOMJS
dnl AC_PROG_INKSCAPE

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
